gccida/g3/gen_split_1087
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1087/src/insn-emit.c:12408:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_lowpart( ( machine_mode)( !v2 + 4), v3); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1087/src/insn-emit.c:12411:61: error: use of undeclared identifier 'machine_mode'
v5 = trunc_int_for_mode( 1 << operands[2]->fld[0].rtwint, ( machine_mode)( !v2 + 4)); 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1087/src/insn-emit.c:12416:30: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_fmt_ee( MULT, ( machine_mode)( !v2 + 4), v7, v6); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1087/src/obj/insn-emit.o] Error 1
